<!--
  ~ strings.xml
  ~ Copyright (c) 2015
  ~ Author: Ionut Damian
  ~ ******************************************************
  ~ This file is part of the Logue project developed at the Lab for Human Centered Multimedia
  ~ of the University of Augsburg.
  ~
  ~ The applications and libraries are free software; you can redistribute them and/or modify them
  ~ under the terms of the GNU General Public License as published by the Free Software
  ~ Foundation; either version 3 of the License, or any later version.
  ~
  ~ The software is distributed in the hope that it will be useful, but WITHOUT
  ~ ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  ~ FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this library; if not, write to the Free Software Foundation, Inc.,
  ~ 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
  -->

<resources>
    <string name="app_name">Logue Worker</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <string name="close">Close</string>

    <string name="action_settings">Options</string>

    <string name="pref_IntensityThresMsg">Select the audio intensity threshold for speech</string>
    <string name="pref_IntensityThresUnit">dB</string>
    <string name="pref_IntensityThresTitle">VAD Threshold</string>
    <string name="pref_AvgWindowMsg">Select moving average window size of arm activity filter</string>
    <string name="pref_AvgWindowUnit">s</string>
    <string name="pref_AvgWindowTitle">MvgAvg Window</string>
    <string name="pref_CountdownThresMsg">Duration until pipeline starts</string>
    <string name="pref_CountdownThresUnit">s</string>
    <string name="pref_CountdownThresTitle">Framework Countdown</string>

    <string name="pref_FbMyoTitle">Myo</string>
    <string name="pref_FbMyoSummary">Deliver feedback using the Myo armband (haptic)</string>
    <string name="pref_FbPhoneTitle">Phone</string>
    <string name="pref_FbPhoneSummary">Deliver feedback using the smartphone (audio/visual)</string>
    <string name="pref_FbGlassTitle">Glass</string>
    <string name="pref_FbGlassSummary">Deliver feedback using Google Glass (audio/visual)</string>

    <string name="pref_FbFileTitle">Strategy File</string>
    <string name="pref_FbFileSummary">Choose the strategy file (must be located in [SDCARD]/logue/)</string>

    <string name="init">Init</string>
    <string name="pref_useAudioTitle">Audio</string>
    <string name="pref_useAudioSummary">Select source of audio</string>
    <string name="pref_useAccTitle">Acceleration</string>
    <string name="pref_useAccSummary">Select source of acceleration</string>
    <string name="pref_catPipeline">Configure Pipeline</string>
    <string name="pref_catOptions">Component Options</string>
    <string name="pref_feedbackTitle">Feedback</string>
    <string name="pref_feedbackSummary">Choose type of feedback</string>

    <string-array name="pref_useAudioKeys">
        <item>None</item>
        <item>Phone</item>
        <item>Glass</item>
    </string-array>

    <string-array name="pref_useAccKeys">
        <item>None</item>
        <item>Phone</item>
        <item>Myo</item>
        <item>MsBand</item>
    </string-array>

    <string-array name="pref_feedbackTypes">
        <item>None</item>
        <item>Local</item>
        <item>Remote</item>
    </string-array>

</resources>
